syntax = "proto3";
package net.phoneyou.gamelife.bb;

//import "amster/bb/Common.proto";

message DescriptorType{
    enum Enum{
        InvalidDescriptor = 0;
        CellInfo = 110;
        Position = 111;
        Dimensions = 2003;
    }
}

message EntityType {
    enum Enum{
        Invalid = 0;
        Cell = 101;
    }
}

//细胞生存状态
message CellType{
    enum Enum{
        Death = 0;  //死亡
        Survive = 1; //生存
    }
}

//rpc return status
message Status{
    enum Enum{
        Failed = 0;
        Success = 1;
    }
}


message CellPos{
    uint32 x = 1;
    uint32 y = 2;
}



